--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = PTD/Syati_Init
 	url = https://www.github.com/SMGCommunity/Syati_Init
 [submodule "SMG2_OpenGhost"]
-	path = ExtraModules/SMG2_OpenGhost
+	path = PTD/SMG2_OpenGhost
 	url = https://www.github.com/SuperHackio/SMG2_OpenGhost
 [submodule "Syati_CommonFunctionHooks"]
 	path = PTD/Syati_CommonFunctionHooks
