--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "Syati_Init"]
 	path = PTD/Syati_Init
 	url = https://www.github.com/SMGCommunity/Syati_Init
-[submodule "SMG2_OpenGhost"]
-	path = PTD/SMG2_OpenGhost
-	url = https://www.github.com/SuperHackio/SMG2_OpenGhost
 [submodule "Syati_CommonFunctionHooks"]
 	path = PTD/Syati_CommonFunctionHooks
 	url = https://www.github.com/SMGCommunity/Syati_CommonFunctionHooks
@@ -13,3 +10,9 @@
 [submodule "Syati_ObjectFactories"]
 	path = PTD/Syati_ObjectFactories
 	url = https://www.github.com/SMGCommunity/Syati_ObjectFactories
+[submodule "BlueCoinSystem"]
+	path = PTD/BlueCoinSystem
+	url = https://www.github.com/Evanbowl/BlueCoinSystem
+[submodule "CustomCoinSpawns"]
+	path = PTD/CustomCoinSpawns
+	url = https://www.github.com/Evanbowl/CustomCoinSpawns
