--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Syati_GlobalLayouts"]
 	path = PTD/Syati_GlobalLayouts
 	url = https://www.github.com/SMGCommunity/Syati_GlobalLayouts
+[submodule "Syati_ObjectFactories"]
+	path = Syati_ObjectFactories
+	url = https://www.github.com/SMGCommunity/Syati_ObjectFactories
