--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = PTD/Syati_GlobalLayouts
 	url = https://www.github.com/SMGCommunity/Syati_GlobalLayouts
 [submodule "Syati_ObjectFactories"]
-	path = Syati_ObjectFactories
+	path = PTD/Syati_ObjectFactories
 	url = https://www.github.com/SMGCommunity/Syati_ObjectFactories
